--- a/environments/.env.example
+++ b/environments/.env.example
@@ -3,3 +3,16 @@ MONGO_URL=
 
 ACCESS_SECRET_WORD=
 REFRESH_SECRET_WORD=
+
+NO_REPLY_EMAIL=
+NO_REPLY_PASSWORD=
+
+S3_BUCKET_NAME=
+S3_BUCKET_REGION=
+S3_ACCESS_KEY=
+S3_SECRET_KEY=
+S3_BUCKET_URL=
+
+TWILIO_ACCOUNT_SID=
+TWILIO_AUTH_TOKEN=
+TWILIO_SERVICE_SID=
