--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "node-cron": "^3.0.2",
     "nodemailer": "^6.7.8",
     "pug": "^3.0.2",
+    "twilio": "^3.82.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
