--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js",
     "start:prod": "NODE_ENV=production node app.js",
     "start:dev": "NODE_ENV=development nodemon app.js",
     "start:local": "NODE_ENV=local nodemon app.js",
